--- a/first.html
+++ b/first.html
@@ -106,34 +106,40 @@
         </h1>
 
         <div>
-            <span>In Css,a color be specified by using a predefined color name:
-
+            <span>
+                In Css,a color be specified by using a predefined color name:
             </span>
         </div>
+        
+<div>
+    <div class="tomato">
+        tomato 
+    </div>
+    <div class="orange">
+        orange 
+    </div>
+    <div class="dodgerblue">
+        dodgerblue
+    </div>
+    <div class="green">
+        green
+    </div>
+</div>
 
-        <div class="tomato">
-            tomato 
-        </div>
-        <div class="orange">
-            orange 
-        </div>
-        <div class="dodgerblue">
-            dodgerblue
-        </div>
-        <div class="green">
-            green
-        </div>
-        <div class="gray">
-            gray
-        </div>
-        <div class="slateblue">
-            slateblue
-        </div>
-        <div class="violet">
-            violet
-        </div>
-        <div class="lightgray">
-            lightgray
-        </div>
+<div>
+            <div class="gray">
+                gray
+            </div>
+            <div class="slateblue">
+                slateblue
+            </div>
+            <div class="violet">
+                violet
+            </div>
+            <div class="lightgray">
+                lightgray
+            </div>
+</div>
+        
     </body>
 </html>
